fix: re-style h1 to remove horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,28 +12,33 @@ body {
     font-family: 'Fondamento', cursive;
 }
 
+/*---------------------------------------------Title container*/
+
 .title-container {
-    background-image: url("../images/scroll.png");
-    background-size: 100% auto;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-top: 30px;
-    height: 250px;
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    align-items: center;
+    width: 60%;
+    margin: 50px auto;
 }
 
 /*---------------------------------------------Text*/
 
 h1 {
     font-family: 'blackpearl', 'Fondamento', cursive, sans-serif;
-    padding: 50px 25px;
-    margin-top: 40px;
+    grid-row: 1;
+    grid-column: 1 / -1;
+    z-index: 1;
+    font-size: 5.5vw;
+    padding-top: 1.5rem;
     text-stroke: 1px #4A0B6E;
     -webkit-text-stroke: 1px #4A0B6E;
 
     /*The below code was obtained from 'fossheim.io' to apply the text colour gradient. */
     background-color: black;
-    background-image: linear-gradient(red, yellow, red);
-    background-size: contain;
+    background-image: linear-gradient(yellow, orange, yellow);
+    background-size: 100% 30%;
     background-repeat: repeat;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -230,6 +235,13 @@ li {
 /*---------------------------------------------Images*/
 
 #book {
+    width: 100%;
+    height: auto;
+    grid-row: 1;
+    grid-column: 1 / -1;
+}
+
+#scroll {
     width: 100%;
     height: auto;
     grid-row: 1;
